  Database didn't clear everything, this went unnoticed until now.
- Added various reverse shell payloads to payload helper dialog.
- Added file chooser helper for SigningCert and SigningKey options.
- Added hack to return correct route info when setting up pivoting through
  Java meterpreter.
- Armitage now posts a note to the event log when a user starts a browser 
  exploit or a server module.

12 Dec 11
---------
- Armitage teaming mode now downloads the resulting file for any fileformat
  exploit.
- Armitage -> Set Exploit Rank and Set Target View now show a * next to an 
  item to indicate the current setting.
- Shift+click on Launch in a module launch dialog will not close the module
  launch dialog. One use case for this: set up a payload multi/handler, 
  shift+click Launch to do it, then change output type to exe, click Launch
  and you're all set.
- Dynamic Workspace editor now trims whitespace from your entries. Errant
  whitespace causes Armitage to reject the entry and your workspace never
  acivates.
- Updated the "msfrpcd died" troubleshooting dialog. The new one takes folks
  to a website with detailed information. 
- Armitage now uses "load" to load a meterpreter module instead of "use"
- Key logger event log announcement now notes the session ID. This is so 
  your teammates will know not to migrate that session since it's recording
  key strokes.
- Right-click X in tab -> Save Screenshot now displays filename without the
  path.
- Deconfliction server now detects when database is not available and offers
  troubleshooting steps. 
- Loot/Downloads viewer now has a right-click menu to Copy selected text.

22 Nov 11 - A big improvement...
---------
- Services refresh is now set to 30s (vs. 60s before)
- Workspaces -> Manage now opens as a tab and shows all data about workspaces
- Fixed a bug with Edit Workspace not auto-checking session box when set.
- Meterpreter -> Access -> Escalate Privileges now highlights the priv esc